# boltzmann

./: .gitignore  Cargo.toml  README.md  simulation_config.toml
benches/: quadtree_bench.rs  spatial_hash_bench.rs
examples/: example.rs
shader/: density_fragment.glsl  density_geometry.glsl  fragment.glsl  geometry.glsl  plotter_fragment.glsl  triangle_150.glslv  vertex.glsl
src/: attribute.rs  bin.rs  collision.rs  common.rs  config.rs  drawing.rs  lib.rs  main.rs  particle.rs  quadtee.rs  quadtree.rs  simulator.rs  spatial_hash.rs  vector.rs
tests/: quadtree_tests.rs  spatial_hash_tests.rs
