[package]
name = "boltzmann"
version = "0.1.0"
authors = ["hargados <hargados@tcd.ie>"]

[dependencies]
# piston_window = "0.52.0"
# pistoncore-sdl2_window = "0.34.0"
# piston2d-opengl_graphics = "0.32.0"
rand = "0.3"
# conrod = "0.47.1"
# piston2d-gfx_graphics = "0.27.0"
# piston2d-graphics = "0.19.0"
# gfx_window_glutin = "*"
# glutin = "*"
# gfx_app = { git = "https://github.com/gfx-rs/gfx/" }
# gfx_app = "*"
# gfx_core = "*"
# gfx = { git = "https://github.com/gfx-rs/gfx/", version = "*" }
# gfx_core = { path = "https://github.com/gfx-rs/gfx/", version = "0.5" }
# gfx = "*"

glutin = "0.7.1"
gfx_core = "0.6"
gfx = "0.14"
gfx_device_gl = "0.13" 
gfx_window_glutin = "0.14" 
cgmath = "0.12.0"
